# screenMirrorTest

./: CMakeLists.txt  CMakeLists.txt.user.3ed6714  CMakeLists.txt.user.901e2a9  CMakeLists.txt.user.9e8d5f0  GBHealth.hpp  GBhealth.cpp  initscreen.cpp  initscreen.h  initscreen.ui  liardetector.cpp  liardetector.h  liardetector.ui  main.cpp  maindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  netconnection.cpp  netconnection.h  recvthread.cpp  recvthread.h  samplingthread.cpp  samplingthread.h  screenMirrorTest.pro  screenMirrorTest.pro.user.901e2a9  screenMirrorTest.pro.user.9e8d5f0  secdialog.cpp  secdialog.h  secdialog.hpp  secdialog.ui  userInfo.txt
include/: GBHealth.hpp  UltraFace.hpp  gb_thread.hpp  lib_header.hpp
model/: bio_model_blood_pressure_diastolic.json  bio_model_blood_pressure_systolic.json
